--- a/css/task4.css
+++ b/css/task4.css
@@ -139,7 +139,7 @@ h2{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     max-width: 1300px;
-    margin: 25px 0 auto;
+    margin: 0 auto;
     gap: 20px;
 }
 
